<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="previous_button">Previous</string>
    <string name="play_pause_button">Play/Pause</string>
    <string name="next_button">Next</string>
    <string name="cover_image">Cover Image</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="enter_ip">Enter IP address</string>
    <string name="save">Save</string>
    <string name="background_image" />
    <string name="remaining">0:00</string>
    <string name="progress">0:00</string>
</resources>